add_library(lingx_core
            conf_file.cc
            cycle.cc
            daemon.cc
            error.cc
            file.cc
            log.cc
            module.cc
            modules.cc
            open_file.cc
            path.cc
            process.cc
            process_cycle.cc
            strings.cc
            times.cc
)
